Breakthrough, working Backtracker configuration setup